# flexis

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  requirements.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: compile-check.yml  datagraph-download.yml  executable-check.yml
cmake/: downloadDataset.cmake  third_party_bliss.cmake
data/lg/: p2p-Gnutella08.lg
python/: generateLGDataset.py
scripts/: processDatasets.sh
src/: CMakeLists.txt  colorScheme.hpp  common.h  dataHelpers.hpp  def.h  demoAuto.cpp  generateInstructions.hpp  generator.hpp  graph.hpp  info.cpp  instruction.hpp  matchState.hpp  matcher.hpp  mining.cpp  mining.hpp  miningTiming.cpp  pattern.hpp  process.cpp  process.hpp
